--- a/Thesis/Chapter2.tex
+++ b/Thesis/Chapter2.tex
@@ -1,73 +1,9 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at pulvinar nisi. Phasellus hendrerit, diam placerat interdum iaculis, mauris justo cursus risus, in viverra purus eros at ligula. Ut metus justo, consequat a tristique posuere, laoreet nec nibh. Etiam et scelerisque mauris. Phasellus vel massa magna. Ut non neque id tortor pharetra bibendum vitae sit amet nisi. Duis nec quam quam, sed euismod justo. Pellentesque eu tellus vitae ante tempus malesuada. Nunc accumsan, quam in congue consequat, lectus lectus dapibus erat, id aliquet urna neque at massa. Nulla facilisi. Morbi ullamcorper eleifend posuere. Donec libero leo, faucibus nec bibendum at, mattis et urna. Proin consectetur, nunc ut imperdiet lobortis, magna neque tincidunt lectus, id iaculis nisi justo id nibh. Pellentesque vel sem in erat vulputate faucibus molestie ut lorem\cite{perez2008pout}.
+\textbf{A. Tsanas, A. Xifara (2012)} \cite{sanas2012xifara} developed a statistical machine learning framework using a range of diverse input variables to study heating load and cooling load requirements of a building. It demonstrated that it is possible to accurately estimate HL with only 0.5 points deviation and CL with 1.5 points deviation from the ground truth (the simulated results). These findings are particularly compelling given the accurate prediction, and also because we can easily infer the output variables in a matter of few seconds without requiring the painstaking design of a new building in a simulation tool.
 
-\begin{figure}
-    \centering
-    \includegraphics[width=\textwidth]{nano}
-    \caption{This is Arduino Nano}
-    \label{fig:nano2}
-\end{figure}
+\textbf{A. Hani and T. Koiv (2012)} \cite{hani2012koiv} analyzes the thermal and electrical energy consumptions for 40 Residential, 7 Educational and 44 Public buildings located in warm summer continental climate. Information about reconstructions, heating source, internal air temperature, air exchange rate and domestic hot water production is tabulated.
 
-\section{A Section}
+\textbf{Dong, B., Cao, C., \& Lee, S. E. (2005)} \cite{dong2005cao} This paper presents support vector machines (SVM), a new neural network algorithm, to forecast building energy consumption in the tropical region. The objective of this paper is to examine the feasibility and applicability of SVM in building load forecasting area. Four commercial buildings in Singapore are selected randomly as case studies. Weather data including monthly mean outdoor dry-bulb temperature (T0), relative humidity (RH) and global solar radiation (GSR) are taken as three input features. Mean monthly landlord utility bills are collected for developing and testing models. Finally, all prediction results are found to have coefficients of variance (CV) less than 3\% and percentage error (\%error) within 4\%.
 
-Quisque tristique urna in lorem laoreet at laoreet quam congue. Donec dolor turpis, blandit non imperdiet aliquet, blandit et felis. In lorem nisi, pretium sit amet vestibulum sed, tempus et sem. Proin non ante turpis. Nulla imperdiet fringilla convallis. Vivamus vel bibendum nisl. Pellentesque justo lectus, molestie vel luctus sed, lobortis in libero. Nulla facilisi. Aliquam erat volutpat. Suspendisse vitae nunc nunc. Sed aliquet est suscipit sapien rhoncus non adipiscing nibh consequat. Aliquam metus urna, faucibus eu vulputate non, luctus eu justo \cite{perez2008pout}.
+\textbf{S.S.K. Kwok, R.K.K. Yuen, E.W.M. Lee (2011)} \cite{kwok2011yuen} This paper discusses the use of the multi-layer perceptron (MLP) model, one of the artificial neural network (ANN) models widely adopted in engineering applications, to estimate the cooling load of a building. The training samples used include weather data obtained from the Hong Kong Observatory and building-related data acquired from an existing prestigious commercial building in Hong Kong that houses a mega complex and operates 24 h a day. The paper also discusses the practical difficulties encountered in acquiring building-related data. In contrast to other studies that use ANN models to predict building cooling load, this paper includes the building occupancy rate as one of the input parameters used to determine building cooling load. The results demonstrate that the building occupancy rate plays a critical role in building cooling load prediction and significantly improves predictive accuracy.
 
-\subsection{A Subsection}
-
-Donec urna leo, vulputate vitae porta eu, vehicula blandit libero. Phasellus eget massa et leo condimentum mollis. Nullam molestie, justo at pellentesque vulputate, sapien velit ornare diam, nec gravida lacus augue non diam. Integer mattis lacus id libero ultrices sit amet mollis neque molestie. Integer ut leo eget mi volutpat congue. Vivamus sodales, turpis id venenatis placerat, tellus purus adipiscing magna, eu aliquam nibh dolor id nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed cursus convallis quam nec vehicula. Sed vulputate neque eget odio fringilla ac sodales urna feugiat.
-
-\subsection{B Sub-Section}
-
-Table \ref{table:1} is really awesome and I like it.
-
-The table \ref{table:1} is an example of referenced \LaTeX elements.
- 
-\begin{table}[h!]
-\centering
-\begin{tabular}{||c c c c||} 
- \hline
- Col1 & Col2 & Col2 & Col3 \\ [0.5ex] 
- \hline\hline
- 1 & 6 & 87837 & 787 \\ 
- 2 & 7 & 78 & 5415 \\
- 3 & 545 & 778 & 7507 \\
- 4 & 545 & 18744 & 7560 \\
- 5 & 88 & 788 & 6344 \\ [1ex] 
- \hline
-\end{tabular}
-\caption{Table to test captions and labels}
-\label{table:2}
-\end{table}
-
-\section{Another Section}
-
-Phasellus nisi quam, volutpat non ullamcorper eget, congue fringilla leo. Cras et erat et nibh placerat commodo id ornare est. Nulla facilisi. Aenean pulvinar scelerisque eros eget interdum. Nunc pulvinar magna ut felis varius in hendrerit dolor accumsan. Nunc pellentesque magna quis magna bibendum non laoreet erat tincidunt. Nulla facilisi.
-
-Duis eget massa sem, gravida interdum ipsum. Nulla nunc nisl, hendrerit sit amet commodo vel, varius id tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac dolor est. Suspendisse ultrices tincidunt metus eget accumsan. Nullam facilisis, justo vitae convallis sollicitudin, eros augue malesuada metus, nec sagittis diam nibh ut sapien. Duis blandit lectus vitae lorem aliquam nec euismod nisi volutpat. Vestibulum ornare dictum tortor, at faucibus justo tempor non. Nulla facilisi. Cras non massa nunc, eget euismod purus. Nunc metus ipsum, euismod a consectetur vel, hendrerit nec nunc.
-
-\begin{figure}
-    \centering
-    \includegraphics{servo_driver}
-    \caption{This is a servo controller.}
-    \label{fig:servo_driver2}
-\end{figure}
-
-Single equation
-\begin{equation}
-    e^{i\pi} = -1
-\end{equation}
-
-Multiple equations
-\begin{align}
-\textnormal{State Vector: }& x = \begin{bmatrix}q&\vec{\omega}\end{bmatrix}^T \\
-\textnormal{Process Model: }& x_{k+1} = A(x_k, w_k) = \begin{bmatrix}q_kq_wq_{\Delta}\\\omega_{k}\end{bmatrix}\\
-\textnormal{Measurement Model: }& z_k = H(x_k, v_k) = \begin{bmatrix}q_kgq_k^* + \vec{v}_{acc}\\\vec{\omega}_k + \vec{v}_{rot}\end{bmatrix}
-\end{align}
-
-This is an example of how you can reference an image. This sentence is referring to the Figure \ref{fig:tree}
-
-\begin{figure}
-    \centering
-    %includegraphics[width=\textwidth]{KinematicTree}
-    \caption{This is some awesome thing.}
-    \label{fig:tree2}
-\end{figure}
+\textbf{Yu, Zhun and Haghighat, Fariborz and Fung, Benjamin C.M. and Yoshino, Hiroshi (2010)} \cite{yu2010zhun} This paper reports the development of a building energy demand predictive model based on the decision tree method. The developed model estimates the building energy performance indexes in a rapid and easy way. This method is appropriate to classify and predict categorical variables: its competitive advantage over other widely used modeling techniques, such as regression method and ANN method, lies in the ability to generate accurate predictive models with interpretable flowchart-like tree structures that enable users to quickly extract useful information.
