--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -13,10 +13,10 @@ have more energy-efficient building designs with improved energy conservation pr
 to efficient building design, the computation of the heating load (HL) and the cooling load (CL) is required to
 determine the specifications of the heating and cooling equipment needed to maintain comfortable indoor air
 conditions.
-Various Machine Learning approach (Regression, SVM, ANN etc) is to be studied, implemented and
-compared on a datasets obtained from Machine Learning Repository, Centre for Machine Learning and
+Various Machine Learning approach (Regression, ANN etc) is to be studied, implemented,
+compared and visualised \cite{Hunter:2007} on the datasets obtained from Machine Learning Repository, Centre for Machine Learning and
 Intelligent Systems, UCI. Finally, a model with the best accuracy is proposed.
 
-\textit{Keywords}: Building energy evaluation; Heating load; Cooling load; Regression; SVM; ANN
+\textit{Keywords}: Building energy evaluation; Heating load; Cooling load; Regression; ANN
 
 \newpage
