--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -116,9 +116,25 @@ load requirements of buildings}
 \fontsize{12pt}{18pt}\selectfont
 \input{Chapter1}
 
-\chapter{Implementation}
+\chapter{Review of Literature}
 \fontsize{12pt}{18pt}\selectfont
 \input{Chapter2}
+
+\chapter{Data exploration}
+\fontsize{12pt}{18pt}\selectfont
+\input{Chapter3}
+
+\chapter{Machine learning approach}
+\fontsize{12pt}{18pt}\selectfont
+\input{Chapter4}
+
+\chapter{Results and Discussions}
+\fontsize{12pt}{18pt}\selectfont
+\input{Chapter5}
+
+\chapter{Summary and Conclusions}
+\fontsize{12pt}{18pt}\selectfont
+\input{Chapter6}
 
 \bibliography{tushar_refs}{}
 \addcontentsline{toc}{chapter}{REFERENCES}
