--- a/Thesis/tushar_refs.bib
+++ b/Thesis/tushar_refs.bib
@@ -1,17 +1,86 @@
 @article{perez2008pout,
   title={A review on buildings energy consumption information, Energy and Buildings},
-  author={L. Perez-Lombard, J. Ortiz, C. Pout},
+  author={L. Perez-Lombard and J. Ortiz and C. Pout},
   volume={40},
   number={3},
   pages={394--398},
   year={2008}
 }
-
 @article{cai2009ren,
   title={China building energy consumption: situation challenges and corresponding measures},
-  author={W.G. Cai, Y. Wu, Y. Zhong, H. Ren},
+  author={W.G. Cai and Y. Wu and Y. Zhong and H. Ren},
   volume={37},
   number={6},
   pages={2054--2059},
   year={2009}
+}
+
+@article{97d2aa88078644a3ab2ef0ca5fd99212,
+title = {Contrasting the capabilities of building energy performance simulation programs},
+author = {Crawley and Drury B. and Hand and Jon W. and Michael Kummert and Griffith and Brent T.},
+year = {2008},
+volume = {43},
+pages = {661--673},
+journal = {Building and Environment},
+number = {4}
+}
+
+@article{Hunter:2007,
+  Author    = {Hunter and J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  publisher = {IEEE COMPUTER SOC},
+  doi = {10.1109/MCSE.2007.55},
+  year      = {2007}
+}
+@article{sanas2012xifara,
+  title={Accurate quantitative estimation of energy performance of residential buildings using statistical machine learning tools},
+  author={A. Tsanas and A. Xifara},
+  volume={49},
+  pages={560--567},
+  year={2012}
+}
+@article{hani2012koiv,
+  title={Energy Consumption Monitoring Analysis for Residential, Educational and Public Buildings},
+  author={A. Hani and T. Koiv},
+  volume={3},
+  number={3},
+  pages={231--238},
+  year={2012},
+  doi={10.4236/sgre.2012.33032}
+}
+@article{dong2005cao,
+  title={Applying support vector machines to predict building energy consumption in tropical region},
+  author={Dong, B. and Cao and C. and Lee and S. E.},
+  volume={37},
+  number={5},
+  pages={545--553},
+  year={2005},
+  doi={10.1016/j.enbuild.2004.09.009}
+}
+@article{kwok2011yuen,
+  title={An intelligent approach to assessing the effect of building occupancy on building cooling load prediction},
+  author={S.S.K. Kwok and R.K.K. Yuen and E.W.M. Lee},
+  year={2011},
+  doi={10.1016/j.buildenv.2011.02.008}
+}
+@article{yu2010zhun,
+  title={A decision tree method for building energy demand modeling.},
+  author={Yu and Zhun and Haghighat and Fariborz and Fung and Benjamin C.M. and Yoshino and Hiroshi},
+  volume={42},
+  number={10},
+  pages={1637--1646},
+  year={2010},
+  doi={10.1016/j.enbuild.2010.04.006}
+}
+@book{bishop,
+    title={Pattern Recognition and Machine Learning},
+    author={Christopher M. Bishop},
+    isbn={9780387310732},
+    year={2006},
+    publisher={Springer Press},
+    keywords = {Machine Learning}
 }
