--- a/Thesis/Chapter1.tex
+++ b/Thesis/Chapter1.tex
@@ -1,70 +1,44 @@
-There has been a considerable body of research on the topic of energy performance of buildings recently due to growing concerns about energy waste and its adverse impact on the environment.
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\textwidth, angle=-90]{nano}
-    \caption{This is Arduino Nano}
-    \label{fig:nano}
-\end{figure}
+Globally the building sector accounts for more electricity use than any other sector,
+42 per cent. No wonder considering that we spend more than 90 per cent of our
+time in buildings. With increasing urbanization, higher in developing countries,
+the number and size of buildings in urban areas will increase, resulting in an
+increased demand for electricity and other forms of energy commonly used in
+buildings. Africa’s rate of urbanization of 3.5 per cent per year is the highest in
+the world, resulting in more urban areas with bigger populations, as well as the
+expansion of existing urban areas. There are currently 40 cities in Africa with
+populations of more than a million and it is expected that by 2015 seventy cities
+will have populations of one million or more.
 
-\section{A Section}
+In many developing countries there is normally very little margin between existing
+power supply and electricity demand. With increasing electricity demand, new
+generation needs to be brought in. Although renewable sources of electricity such
+as hydro, geothermal or wind provide electricity at a much lower cost, their capital
+outlay is large, they are complex and take much longer to implement. Diesel based
+generation is usually brought in the short term to meet this demand, which
+results in increased cost of electricity.
 
-Quisque tristique urna in lorem laoreet at laoreet quam congue. Donec dolor turpis, blandit non imperdiet aliquet, blandit et felis. In lorem nisi, pretium sit amet vestibulum sed, tempus et sem. Proin non ante turpis. Nulla imperdiet fringilla convallis. Vivamus vel bibendum nisl. Pellentesque justo lectus, molestie vel luctus sed, lobortis in libero. Nulla facilisi. Aliquam erat volutpat. Suspendisse vitae nunc nunc. Sed aliquet est suscipit sapien rhoncus non adipiscing nibh consequat. Aliquam metus urna, faucibus eu vulputate non, luctus eu justo \cite{perez2008pout}.
+Investments in energy efficiency in a building can be compared with the cost of
+capital investments necessary on the supply side of the energy system to produce
+a similar amount of peak capacity or annual energy production. Usually, the
+capital costs of efficiency are lower than comparable investments in increased
+supply and there are no additional operating costs of efficiency compared to substantial
+operating costs for supply-side options. In addition, energy efficiency
+investments generally have much shorter lead times than energy supply investments,
+a particularly important consideration in countries where the demand for
+energy services is growing rapidly.
 
-\subsection{A Subsection}
+One consistent quality in the building sector is that it is subject to a high degree
+of regulation. Building codes often influence material use and appliance standards
+that have a significant effect on energy efficiency. Regulatory regimes, to
+the extent that they exist, may therefore provide a pathway to improve efficiency
+for both building construction and a variety of building appliances.
 
-Donec urna leo, vulputate vitae porta eu, vehicula blandit libero. Phasellus eget massa et leo condimentum mollis. Nullam molestie, justo at pellentesque vulputate, sapien velit ornare diam, nec gravida lacus augue non diam. Integer mattis lacus id libero ultrices sit amet mollis neque molestie. Integer ut leo eget mi volutpat congue. Vivamus sodales, turpis id venenatis placerat, tellus purus adipiscing magna, eu aliquam nibh dolor id nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed cursus convallis quam nec vehicula. Sed vulputate neque eget odio fringilla ac sodales urna feugiat.
+Reports \cite{perez2008pout}, \cite{cai2009ren} suggest that heating, ventilation and air conditioning (HVAC), which have a catalytic role in regulating the indoor climate, account for most of the energy use in the buildings. Therefore, one way to alleviate the ever increasing demand for additional energy supply is to have more energy-efficient building designs with improved energy conservation properties. When it comes to efficient building design, the computation of the heating load (HL) and the cooling load (CL) is required to determine the specifications of the heating and cooling equipment needed to maintain comfortable indoor air conditions.
 
-Table \ref{table:1} is really awesome and I like it.
+\section {Simulation tools approach}
+Building energy simulation tools are currently widely used to analyze or forecast building energy consumption in order to facilitate the design and operation of energy efficient buildings. Simulation tools are used extensively across diverse disciplines because they enable experimentation with parameters that would otherwise be infeasible, or at least very difficult to control in practice \cite{97d2aa88078644a3ab2ef0ca5fd99212}
 
-The table \ref{table:1} is an example of referenced \LaTeX elements.
- 
-\begin{table}[h!]
-\centering
-\caption{Table to test captions and labels}
-\begin{tabular}{||c c c c||} 
- \hline
- Col1 & Col2 & Col2 & Col3 \\ [0.5ex] 
- \hline\hline
- 1 & 6 & 87837 & 787 \\ 
- 2 & 7 & 78 & 5415 \\
- 3 & 545 & 778 & 7507 \\
- 4 & 545 & 18744 & 7560 \\
- 5 & 88 & 788 & 6344 \\ [1ex] 
- \hline
-\end{tabular}
-\label{table:1}
-\end{table}
+\section{Machine learning approach}
+Using advanced dedicated building energy simulation software may provide reliable solutions to estimate the impact of building design alternatives; however this process can be very time-consuming and requires user expertise in a particular program. Moreover, the accuracy of the estimated results may vary across different building simulation software. Hence, in practice many researchers rely on machine learning tools to study the effect of various building parameters (e.g. compactness) on some variables of interest (e.g. energy) because this is easier and faster if a database of the required ranges of variables is available. Using statistical and machine learning concepts has the distinct advantage that distilled expertise from other disciplines is brought in the EPB domain, and by using these techniques it is extremely fast to obtain answers by varying some building design parameters once a model has been adequately trained. Moreover, statisticalanalysis can enhance our understanding offering quantitative expressions of the factors that affect the quantity (or quantities) of interest that the building designer or architect may wish to focus on.
 
-\section{Another Section}
-
-Phasellus nisi quam, volutpat non ullamcorper eget, congue fringilla leo. Cras et erat et nibh placerat commodo id ornare est. Nulla facilisi. Aenean pulvinar scelerisque eros eget interdum. Nunc pulvinar magna ut felis varius in hendrerit dolor accumsan. Nunc pellentesque magna quis magna bibendum non laoreet erat tincidunt. Nulla facilisi.
-
-Duis eget massa sem, gravida interdum ipsum. Nulla nunc nisl, hendrerit sit amet commodo vel, varius id tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac dolor est. Suspendisse ultrices tincidunt metus eget accumsan. Nullam facilisis, justo vitae convallis sollicitudin, eros augue malesuada metus, nec sagittis diam nibh ut sapien. Duis blandit lectus vitae lorem aliquam nec euismod nisi volutpat. Vestibulum ornare dictum tortor, at faucibus justo tempor non. Nulla facilisi. Cras non massa nunc, eget euismod purus. Nunc metus ipsum, euismod a consectetur vel, hendrerit nec nunc.
-
-\begin{figure}
-    \centering
-    \includegraphics{servo_driver}
-    \caption{This is a servo controller.}
-    \label{fig:servo_driver}
-\end{figure}
-
-Single equation
-\begin{equation}
-    e^{i\pi} = -1
-\end{equation}
-
-Multiple equations
-\begin{align}
-\textnormal{State Vector: }& x = \begin{bmatrix}q&\vec{\omega}\end{bmatrix}^T \\
-\textnormal{Process Model: }& x_{k+1} = A(x_k, w_k) = \begin{bmatrix}q_kq_wq_{\Delta}\\\omega_{k}\end{bmatrix}\\
-\textnormal{Measurement Model: }& z_k = H(x_k, v_k) = \begin{bmatrix}q_kgq_k^* + \vec{v}_{acc}\\\vec{\omega}_k + \vec{v}_{rot}\end{bmatrix}
-\end{align}
-
-This is an example of how you can reference an image. This sentence is referring to the Figure \ref{fig:tree}
-
-\begin{figure}
-    \centering
-    %\includegraphics[width=\textwidth]{KinematicTree}
-    \caption{This is some awesome thing.}
-    \label{fig:tree}
-\end{figure}
+In this report, various suitable machine learning models (linear and non-linear) have been explored to predict HL and CL.
