--- a/Thesis/bonafide.tex
+++ b/Thesis/bonafide.tex
@@ -21,8 +21,8 @@
 
 \begin{tabu} to \textwidth { X[c] X[c] X[c] }
 
- \textbf{\theguide} & \hfill &\textbf{\thehod} \\ 
-  Guide & \hfill & Head of the Department
+ \textbf{\theguide} & \textbf{\thecoguide}  & \textbf{\thehod} \\ 
+  Guide & Co-Guide & Head of the Department \\
 
 \end{tabu}
 
