--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -38,11 +38,18 @@
 \newcommand{\thetitle}{Intelligent estimation of heating and cooling
 load requirements of buildings}
 \newcommand{\theguide}{Dr.K.Panneerselvam}
+\newcommand{\thecoguide}{Dr.E.S.Gopi}
 \newcommand{\thehod}{Dr.M.Duraiselvam}
 \newcommand{\thedepartment}{Production Engineering}
 \newcommand{\theyear}{2017}
 \newcommand{\theacadyear}{2016-2017}
 \newcommand{\themonth}{April}
+\newcommand{\E}{\mathrm{E}}
+\newcommand{\Var}{\mathrm{Var}}
+\newcommand{\Cov}{\mathrm{Cov}}
+\newcommand{\Corr}{\mathrm{Corr}}
+
+
 
 %Adjusting the caption settings
 \captionsetup[figure]{labelfont=bf, textfont=bf}
