--- a/Thesis/Chapter6.tex
+++ b/Thesis/Chapter6.tex
@@ -16,13 +16,13 @@
   \begin{figure}[h!]
       \centering
       \includegraphics[width=0.9\linewidth]{to_ridge_cl}
-      \caption{Fitting : Target CL vs Output CL}
+      \caption{Target CL, Output CL and corresponding error (target-output) plot}
       \label{fig:to_ridge_cl}                    
   \end{figure}
   \begin{figure}[h!]
       \centering
       \includegraphics[width=0.9\linewidth]{to_ridge_hl}
-      \caption{Fitting : Target HL vs Output HL}
+      \caption{Target HL, Output HL and corresponding error (target-output) plot}
       \label{fig:to_ridge_hl}                    
   \end{figure}
   \newpage
@@ -30,13 +30,13 @@
   \begin{figure}[h!]
       \centering
       \includegraphics[width=0.9\linewidth]{to_ann_cl}
-      \caption{Fitting : Target CL vs Output CL}
+      \caption{Target CL, Output CL and corresponding error (target-output) plot}
       \label{fig:to_ann_cl}                    
   \end{figure}
   \begin{figure}[h!]
       \centering
       \includegraphics[width=0.9\linewidth]{to_ann_hl}
-      \caption{Fitting : Target HL vs Output HL}
+      \caption{Target HL, Output HL and corresponding error (target-output) plot}
       \label{fig:to_ann_hl}                    
   \end{figure}
   
